<resources>
    <string name="app_name">Film Dictionary</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_discover">Discover</string>
    <string name="title_search">Search</string>
    <string name="text_genres">Genres</string>
    <string name="tab_information">Information</string>
    <string name="tab_movies">Movies</string>
    <string name="title_name">Name:</string>
    <string name="titlt_gender">Gender:</string>
    <string name="title_birthday">Birthday:</string>
    <string name="title_place_of_birth">Place of Birth:</string>
    <string name="title_department">Department:</string>
    <string name="title_biography">Biography:</string>
    <string name="title_popularity">Popularity</string>
    <string name="tab_trailer">Trailer</string>
    <string name="tab_actor">Actor</string>
    <string name="tab_producer">Producer</string>
    <string name="text_search_movie">Search movies and users</string>
    <string name="label_minutes">minutes</string>
    <string name="label_overview">Overview</string>
    <string name="label_empty">EMPTY</string>
    <string name="label_charater">as</string>
    <string name="text_capital_history">HISTORY</string>
    <string name="text_comment">Comments</string>
    <string name="signin">Sign in</string>
    <string name="signin_dont_have_account">Don\'t have an account?</string>
    <string name="signup">Sign up</string>
    <string name="signin_username">User name</string>
    <string name="signin_password">Password</string>
    <string name="signup_email">Email</string>
    <string name="signup_re_password">Confirm password</string>
    <string name="signup_full_name">Full name</string>
    <string name="text_no_internet">Please check your internet</string>

    // Comment
    <string name="comment_invalid_input">Please type something</string>
    <string name="comment_posting">posting</string>
    <string name="connect">Connected</string>
    <string name="disconnect">Disconnected, Please check your internet connection</string>
    <string name="error_connect">Failed to connect</string>

    // Socket in comment
    <string name="message_welcome">Welcome to Socket.IO Chat –</string>
    <plurals name="message_participants">
        <item quantity="one">there\'s %d participant</item>
        <item quantity="other">there are %d participants</item>
    </plurals>
    <string name="message_user_joined">%s joined</string>
    <string name="message_user_left">%s left</string>
    <string name="someone_typing">Someone is typing …</string>
    <string name="hint_edit_text_chat">Type your message</string>

    // Profile
    <string name="profile_tab_post">Post</string>
    <string name="profile_tab_reviewed_movie">Reviewed Movie</string>
    <string name="content_text_one">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In a quam tincidunt urna feugiat vestibulum quis non dolor. Phasellus porttitor sem arcu, quis ultrices mauris rutrum commodo. Quisque at lobortis libero. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus consectetur nisi eget leo imperdiet congue hendrerit et eros. Curabitur sed odio euismod, mattis enim feugiat, faucibus ante. Maecenas iaculis, elit ac bibendum lacinia, dolor libero auctor justo, finibus malesuada ex metus eget elit. Vestibulum sit amet finibus massa. Nulla id eros lectus. Donec vestibulum feugiat euismod. Proin tincidunt nulla in velit dapibus fermentum. Phasellus egestas sed ipsum id malesuada. Nullam at dignissim nunc. Vivamus mollis lobortis tristique.

Ut justo velit, consectetur sit amet porttitor et, scelerisque et odio. Suspendisse viverra in risus sit amet pharetra. Suspendisse sit amet ipsum est. Duis porta lacus ultrices, posuere sapien sollicitudin, vestibulum nibh. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In fringilla tincidunt tincidunt. Vivamus mollis lorem et mattis tempor. Morbi volutpat arcu lorem, a lobortis turpis blandit ac. Curabitur dolor erat, auctor tristique porttitor id, venenatis at nunc. Suspendisse efficitur elit sem, sed interdum ligula commodo nec. Cras semper justo vel auctor hendrerit. Nam dui diam, pretium ac tristique eu, porttitor a urna. Cras ac sagittis mi, eu bibendum lacus.

Aenean in arcu laoreet, gravida orci et, faucibus velit. Etiam finibus viverra tortor vel pretium. Curabitur vitae ex sed ex convallis suscipit. Pellentesque malesuada hendrerit neque, et vestibulum ligula mollis at. Mauris vehicula nisl quam, et eleifend orci varius eget. Quisque ut urna eu ipsum commodo feugiat. Suspendisse ac sem nec enim laoreet dictum venenatis eget neque. Donec egestas suscipit leo, sodales posuere nibh accumsan nec. Sed nec erat aliquam, hendrerit sapien non, fermentum diam. Aliquam erat volutpat. Aliquam varius semper purus, ac accumsan arcu finibus non.
    </string>

    // Feed
    <string name="feed_question_create_post">What is on your mind</string>
    <string name="feed_movie">Movie</string>
    <string name="feed_video">Video</string>
    <string name="feed_image">Image</string>
    <string name="feed_heart">Heart</string>
    <string name="feed_comment">Comment</string>

    // Create post
    <string name="create_post_title">Create post</string>
    <string name="create_post_done">Done</string>
    <string name="create_post_camera">Camera</string>
    <string name="create_post_image_video">Image/Video</string>

    //Custom gallery
    <string name="custom_gallery_gallery">Gallery</string>

    //Chat
    <string name="chat_opponent_typing">%s is typing …</string>

    //Search
    <string name="search_movie">Movie</string>
    <string name="search_user">User</string>
</resources>
