<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:layout_marginBottom="@dimen/dp_10">

        <ImageView
            android:id="@+id/image_avatar"
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_45"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/avatar_def" />

        <TextView
            android:id="@+id/text_question"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_15"
            android:background="@drawable/bg_edit_text_question_feed"
            android:fontFamily="@font/san_francisco_display_regular"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/dp_20"
            android:text="@string/feed_question_create_post"
            android:textColor="@color/color_dark_gray"
            android:textSize="@dimen/sp_15"
            app:layout_constraintBottom_toBottomOf="@id/image_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_avatar"
            app:layout_constraintTop_toTopOf="@id/image_avatar" />

        <View
            android:id="@+id/view_divider"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_min"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@color/color_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_avatar" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_post_review"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            app:layout_constraintEnd_toStartOf="@id/layout_post_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_divider">

            <ImageView
                android:id="@+id/image_review"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:src="@drawable/ic_movie_post"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/text_review_movie"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_review_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:fontFamily="@font/san_francisco_display_semibold"
                android:text="@string/feed_movie"
                android:textColor="@color/color_dark_gray"
                android:textSize="@dimen/sp_13"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_review"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="@dimen/dp_min"
                android:layout_height="@dimen/dp_30"
                android:background="@color/color_dark_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_post_image"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            app:layout_constraintEnd_toStartOf="@id/layout_post_video"
            app:layout_constraintStart_toEndOf="@id/layout_post_review"
            app:layout_constraintTop_toBottomOf="@id/view_divider">

            <ImageView
                android:id="@+id/image_image"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:src="@drawable/ic_image_post"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/text_image"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:fontFamily="@font/san_francisco_display_semibold"
                android:text="@string/feed_image"
                android:textColor="@color/color_dark_gray"
                android:textSize="@dimen/sp_13"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_image"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_post_video"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/layout_post_image"
            app:layout_constraintTop_toBottomOf="@id/view_divider">

            <ImageView
                android:id="@+id/image_post_video"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:src="@drawable/ic_video_post"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/text_video"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:fontFamily="@font/san_francisco_display_semibold"
                android:text="@string/feed_video"
                android:textColor="@color/color_dark_gray"
                android:textSize="@dimen/sp_13"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_post_video"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="@dimen/dp_min"
                android:layout_height="@dimen/dp_30"
                android:background="@color/color_dark_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
