<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_15"
                    android:src="@drawable/ic_arrow_left_black_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_create_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_15"
                    android:fontFamily="@font/san_francisco_display_semibold"
                    android:text="@string/create_post_title"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/sp_17"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/image_back"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_15"
                    android:layout_marginEnd="@dimen/dp_15"
                    android:fontFamily="@font/san_francisco_display_semibold"
                    android:text="@string/create_post_done"
                    android:textColor="@color/color_dark_gray"
                    android:textSize="@dimen/sp_17"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.appbar.AppBarLayout>


        <EditText
            android:id="@+id/text_question"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/color_white"
            android:fontFamily="@font/san_francisco_display_regular"
            android:gravity="top"
            android:hint="@string/feed_question_create_post"
            android:padding="@dimen/dp_10"
            android:textColor="@color/color_dark_gray"
            app:layout_constraintBottom_toTopOf="@id/image_post"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar" />

        <ImageView
            android:id="@+id/image_post"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/layout_bottom_create_post"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_question"
            android:background="@color/color_white"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/layout_card"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10"
            android:paddingTop="@dimen/dp_5"
            android:visibility="gone"
            android:paddingBottom="@dimen/dp_5">

            <View
                android:id="@+id/view_dot"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/bg_circle_light_black"/>

            <TextView
                android:id="@+id/text_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="planing to watch"
                android:layout_marginStart="@dimen/dp_10"
                app:layout_constraintStart_toEndOf="@id/view_dot"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/color_black"
                android:textSize="@dimen/sp_15"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



        <include android:id="@+id/layout_card"
            android:visibility="gone"
            layout="@layout/layout_item_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            app:layout_constraintBottom_toTopOf="@id/layout_bottom_create_post"/>


        <include
            android:id="@+id/layout_bottom_create_post"
            layout="@layout/layout_bottom_create_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
